feat: IntÃ©gration complÃ¨te des notifications email automatiques - Firebase Functions dÃ©ployÃ©es et testÃ©es avec succÃ¨s

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
             <h2 class="section-title">Nos Produits</h2>
             <p class="section-subtitle">Une gamme complète de compresseurs adaptés à vos besoins</p>
             
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mt-12">
                 <!-- Carrousel 1 : Compresseurs à Piston -->
                 <div class="product-card">
                     <div class="carousel-container mb-4" data-carousel="piston">
@@ -120,10 +120,10 @@
                             <img src="/images/piston5.png" alt="Compresseur à Piston 5" class="carousel-image">
                         </div>
                         <button class="carousel-btn carousel-prev" aria-label="Image précédente">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
                         </button>
                         <button class="carousel-btn carousel-next" aria-label="Image suivante">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
                         </button>
                         <div class="carousel-indicators">
                             <span class="indicator active" data-index="0"></span>
@@ -151,10 +151,10 @@
                             <img src="/images/vis3.png" alt="Compresseur à Vis 3" class="carousel-image">
                         </div>
                         <button class="carousel-btn carousel-prev" aria-label="Image précédente">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
                         </button>
                         <button class="carousel-btn carousel-next" aria-label="Image suivante">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
                         </button>
                         <div class="carousel-indicators">
                             <span class="indicator active" data-index="0"></span>
@@ -182,10 +182,10 @@
                             <img src="/images/remplacement4.png" alt="Pompe de remplacement 4" class="carousel-image">
                         </div>
                         <button class="carousel-btn carousel-prev" aria-label="Image précédente">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
                         </button>
                         <button class="carousel-btn carousel-next" aria-label="Image suivante">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
                         </button>
                         <div class="carousel-indicators">
                             <span class="indicator active" data-index="0"></span>
@@ -197,6 +197,34 @@
                     <h3 class="text-2xl font-bold mb-3">Pompe de remplacement</h3>
                     <p class="text-gray-700 mb-6 leading-relaxed">
                         Solutions de remplacement complètes et performantes pour tous vos besoins.
+                    </p>
+                    <a href="#contact" class="btn-link inline-flex items-center gap-2">
+                        Demander un devis 
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
+                    </a>
+                </div>
+                
+                <!-- Carrousel 4 : Traitement de l'air comprimé -->
+                <div class="product-card">
+                    <div class="carousel-container mb-4" data-carousel="traitement">
+                        <div class="carousel-wrapper">
+                            <img src="/images/traitement1.png" alt="Traitement de l'air comprimé 1" class="carousel-image active">
+                            <img src="/images/traitement2.png" alt="Traitement de l'air comprimé 2" class="carousel-image">
+                        </div>
+                        <button class="carousel-btn carousel-prev" aria-label="Image précédente">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M15 19l-7-7 7-7"/></svg>
+                        </button>
+                        <button class="carousel-btn carousel-next" aria-label="Image suivante">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"/></svg>
+                        </button>
+                        <div class="carousel-indicators">
+                            <span class="indicator active" data-index="0"></span>
+                            <span class="indicator" data-index="1"></span>
+                        </div>
+                    </div>
+                    <h3 class="text-2xl font-bold mb-3">Traitement de l'air comprimé</h3>
+                    <p class="text-gray-700 mb-6 leading-relaxed">
+                        Solutions complètes de traitement et filtration pour un air comprimé de qualité optimale.
                     </p>
                     <a href="#contact" class="btn-link inline-flex items-center gap-2">
                         Demander un devis 
@@ -248,7 +276,7 @@
                 <div>
                     <h2 class="text-4xl font-bold mb-6 text-slate-900">À Propos de Nous</h2>
                     <p class="text-slate-600 mb-4 leading-relaxed">
-                        <strong class="text-slate-900">Compresseurs BA</strong> est votre partenaire de confiance dans le domaine de la compression d'air industrielle au Québec.
+                        <strong class="text-slate-900">Compresseurs BA</strong> est votre partenaire de confiance dans le domaine de l'air comprimé industriel au Québec.
                     </p>
                     <p class="text-slate-600 mb-6 leading-relaxed">
                         Notre expertise et notre engagement envers la qualité nous ont permis de devenir un acteur majeur du secteur. Nous offrons des services complets : <strong>vente, réparation et entretien</strong> de compresseurs.
@@ -556,7 +584,7 @@
                 <div>
                     <h3 class="text-xl font-bold mb-4">Compresseurs BA</h3>
                     <p class="text-slate-400 leading-relaxed mb-4">
-                        Votre partenaire en solutions de compression d'air au Québec.
+                        Votre partenaire en solutions d'air comprimé au Québec.
                     </p>
                     <p class="text-slate-300 font-semibold">
                         📞 <a href="tel:4182819780" class="hover:text-white transition-colors">418 281 9780</a>
