--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,10 @@
     <link rel="preload" href="/images/logo.png" as="image">
     <link rel="preload" href="css/style.css" as="style">
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <!-- Favicon - Logo Compresseurs BA -->
+    <link rel="icon" type="image/png" href="/images/logo.png">
+    <link rel="apple-touch-icon" href="/images/logo.png">
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
     
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
